gadjid/src/snapshots/gadjid__test__large-CPDAG03-vs-CPDAG04.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10003.CPDAG-100
g_guess: 10004.CPDAG-100
ancestor_aid:
  - 0.3486868686868687
  - 3452
oset_aid:
  - 0.38707070707070707
  - 3832
parent_aid:
  - 0.8469696969696969
  - 8385
shd:
  - 0.3208080808080808
  - 1588
t:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 19
  - 20
  - 21
  - 22
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 87
  - 88
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
y: 7
z:
  - 9
  - 17
  - 23
  - 46
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 18
  - 25
  - 38
  - 46
  - 51
  - 72
  - 83
  - 89
  - 90
  - 99
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 7
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
