gadjid/src/snapshots/gadjid__test__large-CPDAG04-vs-CPDAG05.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10004.CPDAG-100
g_guess: 10005.CPDAG-100
ancestor_aid:
  - 0.0044444444444444444
  - 44
oset_aid:
  - 0.02878787878787879
  - 285
parent_aid:
  - 0.08464646464646465
  - 838
shd:
  - 0.005454545454545455
  - 27
t:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 19
  - 21
  - 22
  - 23
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 37
  - 39
  - 43
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 59
  - 60
  - 61
  - 62
  - 63
  - 65
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 88
  - 90
  - 91
  - 93
  - 94
  - 95
  - 97
  - 98
  - 99
y: 25
z:
  - 6
  - 20
  - 58
  - 87
  - 96
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 25
oset_for_t_onto_y_in_g_guess:
  - 0
  - 3
  - 13
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 75
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 86
  - 87
  - 89
  - 92
  - 93
  - 95
  - 96
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 3
  - 6
  - 13
  - 18
  - 20
  - 25
  - 36
  - 38
  - 40
  - 41
  - 42
  - 44
  - 57
  - 58
  - 64
  - 66
  - 77
  - 86
  - 87
  - 89
  - 92
  - 96
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 6
  - 18
  - 20
  - 25
  - 36
  - 38
  - 40
  - 41
  - 42
  - 44
  - 57
  - 58
  - 64
  - 66
  - 77
  - 86
  - 87
  - 89
  - 92
  - 96
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 6
  - 18
  - 20
  - 25
  - 36
  - 38
  - 40
  - 41
  - 42
  - 44
  - 57
  - 58
  - 64
  - 66
  - 77
  - 86
  - 87
  - 89
  - 92
  - 96
