gadjid/src/snapshots/gadjid__test__large-CPDAG05-vs-CPDAG06.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10005.CPDAG-100
g_guess: 10006.CPDAG-100
ancestor_aid:
  - 0.02494949494949495
  - 247
oset_aid:
  - 0.02666666666666667
  - 264
parent_aid:
  - 0.04181818181818182
  - 414
shd:
  - 0.006262626262626263
  - 31
t:
  - 3
  - 4
  - 6
  - 11
  - 14
  - 15
  - 17
  - 21
  - 28
  - 29
  - 30
  - 31
  - 51
  - 54
  - 58
  - 61
  - 63
  - 65
  - 69
  - 71
  - 73
  - 82
  - 83
  - 88
  - 91
  - 93
  - 94
  - 96
  - 99
y: 48
z:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 12
  - 20
  - 22
  - 26
  - 33
  - 44
  - 49
  - 53
  - 62
  - 64
  - 70
  - 77
  - 81
  - 85
  - 87
  - 90
  - 92
  - 97
  - 98
possible_descendants_of_t_in_g_guess:
  - 0
  - 3
  - 4
  - 6
  - 7
  - 9
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 7
  - 9
  - 12
  - 16
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 55
  - 56
  - 57
  - 59
  - 60
  - 62
  - 64
  - 66
  - 67
  - 68
  - 70
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 95
  - 97
  - 98
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 16
  - 18
  - 19
  - 20
  - 22
  - 23
  - 24
  - 25
  - 26
  - 33
  - 35
  - 37
  - 38
  - 40
  - 42
  - 43
  - 47
  - 48
oset_for_t_onto_y_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 21
  - 23
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 93
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 55
  - 56
  - 57
  - 59
  - 60
  - 62
  - 64
  - 66
  - 67
  - 68
  - 70
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 16
  - 18
  - 19
  - 20
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 55
  - 56
  - 57
  - 59
  - 60
  - 62
  - 64
  - 66
  - 67
  - 68
  - 70
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 16
  - 18
  - 19
  - 20
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 55
  - 56
  - 57
  - 59
  - 60
  - 62
  - 64
  - 66
  - 67
  - 68
  - 70
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 95
  - 97
  - 98
