gadjid/src/snapshots/gadjid__test__large-CPDAG07-vs-CPDAG08.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10007.CPDAG-100
g_guess: 10008.CPDAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.008686868686868687
  - 86
parent_aid:
  - 0.14505050505050504
  - 1436
shd:
  - 0.00808080808080808
  - 40
t:
  - 1
  - 2
  - 5
  - 8
  - 9
  - 11
  - 12
  - 13
  - 14
  - 16
  - 23
  - 28
  - 29
  - 30
  - 34
  - 35
  - 36
  - 38
  - 39
  - 40
  - 41
  - 43
  - 44
  - 48
  - 50
  - 52
  - 54
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 64
  - 65
  - 68
  - 73
  - 74
  - 75
  - 79
  - 81
  - 83
  - 85
  - 86
  - 87
  - 88
  - 95
  - 99
y: 72
z:
  - 0
  - 3
  - 4
  - 7
  - 15
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 37
  - 42
  - 45
  - 46
  - 47
  - 53
  - 55
  - 66
  - 70
  - 71
  - 76
  - 77
  - 78
  - 82
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 3
  - 15
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 33
  - 37
  - 42
  - 45
  - 46
  - 47
  - 49
  - 51
  - 53
  - 55
  - 57
  - 63
  - 66
  - 67
  - 69
  - 70
  - 71
  - 72
  - 76
  - 77
  - 78
  - 80
  - 82
  - 84
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 4
  - 6
  - 7
  - 10
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 33
  - 37
  - 42
  - 45
  - 46
  - 47
  - 49
  - 51
  - 53
  - 55
  - 63
  - 66
  - 69
  - 72
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 3
  - 4
  - 6
  - 7
  - 10
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 33
  - 37
  - 42
  - 45
  - 46
  - 47
  - 49
  - 51
  - 53
  - 55
  - 57
  - 63
  - 66
  - 67
  - 69
  - 70
  - 71
  - 72
  - 76
  - 77
  - 78
  - 80
  - 82
  - 84
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 3
  - 4
  - 6
  - 7
  - 10
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 33
  - 37
  - 42
  - 45
  - 46
  - 47
  - 49
  - 51
  - 53
  - 55
  - 57
  - 63
  - 66
  - 67
  - 69
  - 70
  - 71
  - 72
  - 76
  - 77
  - 78
  - 80
  - 82
  - 84
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 4
  - 6
  - 7
  - 10
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 31
  - 32
  - 33
  - 37
  - 42
  - 45
  - 46
  - 47
  - 49
  - 51
  - 53
  - 55
  - 57
  - 63
  - 66
  - 67
  - 69
  - 70
  - 71
  - 72
  - 76
  - 77
  - 78
  - 80
  - 82
  - 84
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
