gadjid/src/snapshots/gadjid__test__large-CPDAG08-vs-CPDAG09.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10008.CPDAG-100
g_guess: 10009.CPDAG-100
ancestor_aid:
  - 0.0014141414141414141
  - 14
oset_aid:
  - 0.01585858585858586
  - 157
parent_aid:
  - 0.1703030303030303
  - 1686
shd:
  - 0.007676767676767677
  - 38
t:
  - 4
  - 11
  - 14
  - 15
  - 16
  - 17
  - 26
  - 29
  - 31
  - 32
  - 34
  - 36
  - 46
  - 48
  - 53
  - 54
  - 55
  - 61
  - 65
  - 72
  - 76
  - 78
  - 84
  - 86
  - 88
  - 90
  - 96
  - 97
  - 98
y: 57
z:
  - 49
  - 81
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 33
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 51
  - 52
  - 56
  - 57
  - 58
  - 59
  - 60
  - 62
  - 63
  - 64
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 74
  - 75
  - 77
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 87
  - 89
  - 91
  - 92
  - 93
  - 94
  - 95
  - 99
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 33
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 51
  - 52
  - 56
  - 57
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 33
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 51
  - 52
  - 56
  - 57
  - 58
  - 59
  - 60
  - 62
  - 63
  - 64
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 74
  - 75
  - 77
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 87
  - 89
  - 91
  - 92
  - 93
  - 94
  - 95
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 33
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 51
  - 52
  - 56
  - 57
  - 58
  - 59
  - 60
  - 62
  - 63
  - 64
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 74
  - 75
  - 77
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 87
  - 89
  - 91
  - 92
  - 93
  - 94
  - 95
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 33
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 51
  - 52
  - 56
  - 57
  - 58
  - 59
  - 60
  - 62
  - 63
  - 64
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 74
  - 75
  - 77
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 87
  - 89
  - 91
  - 92
  - 93
  - 94
  - 95
  - 99
