gadjid/src/snapshots/gadjid__test__large-CPDAG09-vs-CPDAG10.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10009.CPDAG-100
g_guess: 10010.CPDAG-100
ancestor_aid:
  - 0.2726262626262626
  - 2699
oset_aid:
  - 0.3422222222222222
  - 3388
parent_aid:
  - 0.7282828282828283
  - 7210
shd:
  - 0.4955555555555556
  - 2453
t:
  - 0
  - 1
  - 2
  - 3
  - 6
  - 7
  - 8
  - 10
  - 13
  - 14
  - 17
  - 19
  - 20
  - 21
  - 22
  - 23
  - 26
  - 27
  - 28
  - 29
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 40
  - 42
  - 43
  - 44
  - 45
  - 46
  - 48
  - 53
  - 55
  - 56
  - 58
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 69
  - 71
  - 72
  - 73
  - 75
  - 76
  - 78
  - 79
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 91
  - 92
  - 93
  - 94
  - 95
  - 97
  - 98
  - 99
y: 31
z:
  - 4
  - 5
  - 11
  - 12
  - 18
  - 30
  - 32
  - 47
  - 49
  - 52
  - 54
  - 63
  - 68
  - 70
  - 74
  - 80
  - 81
  - 90
  - 96
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 4
  - 5
  - 9
  - 11
  - 12
  - 15
  - 16
  - 18
  - 24
  - 25
  - 30
  - 31
  - 32
  - 39
  - 41
  - 47
  - 49
  - 50
  - 51
  - 52
  - 54
  - 57
  - 59
  - 63
  - 68
  - 70
  - 74
  - 77
  - 80
  - 81
  - 90
  - 96
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 4
  - 5
  - 9
  - 11
  - 12
  - 15
  - 16
  - 18
  - 24
  - 25
  - 31
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 7
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 7
  - 9
  - 11
  - 12
  - 15
  - 16
  - 18
  - 24
  - 25
  - 30
  - 31
  - 32
  - 39
  - 41
  - 47
  - 49
  - 50
  - 51
  - 52
  - 54
  - 57
  - 59
  - 63
  - 68
  - 70
  - 74
  - 77
  - 80
  - 81
  - 90
  - 96
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 4
  - 5
  - 9
  - 11
  - 12
  - 15
  - 16
  - 18
  - 24
  - 25
  - 30
  - 31
  - 32
  - 39
  - 41
  - 47
  - 49
  - 50
  - 51
  - 52
  - 54
  - 57
  - 59
  - 63
  - 68
  - 70
  - 74
  - 77
  - 80
  - 81
  - 90
  - 96
not_validly_adjusted_for_in_g_guess_by_z:
  - 4
  - 5
  - 9
  - 11
  - 12
  - 15
  - 16
  - 18
  - 24
  - 25
  - 30
  - 31
  - 32
  - 39
  - 41
  - 47
  - 49
  - 50
  - 51
  - 52
  - 54
  - 57
  - 59
  - 63
  - 68
  - 70
  - 74
  - 77
  - 80
  - 81
  - 90
  - 96
