gadjid/src/snapshots/gadjid__test__large-CPDAG20-vs-CPDAG21.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-20
g_guess: 100-node-CPDAG-21
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
shd:
  - 0.006464646464646465
  - 32
t:
  - 1
  - 2
  - 6
  - 7
  - 11
  - 12
  - 16
  - 17
  - 19
  - 22
  - 24
  - 25
  - 26
  - 27
  - 29
  - 31
  - 34
  - 36
  - 38
  - 40
  - 41
  - 44
  - 46
  - 47
  - 49
  - 50
  - 52
  - 54
  - 55
  - 57
  - 58
  - 60
  - 61
  - 63
  - 64
  - 67
  - 68
  - 69
  - 72
  - 76
  - 77
  - 80
  - 83
  - 84
  - 87
  - 88
  - 89
  - 90
  - 95
  - 96
  - 98
y: 71
z:
  - 4
  - 5
  - 15
  - 20
  - 28
  - 33
  - 35
  - 37
  - 42
  - 51
  - 74
  - 93
  - 94
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 3
  - 5
  - 10
  - 13
  - 14
  - 15
  - 18
  - 20
  - 23
  - 30
  - 32
  - 33
  - 35
  - 37
  - 39
  - 42
  - 43
  - 45
  - 48
  - 51
  - 53
  - 56
  - 59
  - 62
  - 65
  - 66
  - 70
  - 71
  - 73
  - 74
  - 75
  - 78
  - 79
  - 81
  - 82
  - 85
  - 86
  - 91
  - 92
  - 93
  - 94
  - 97
  - 99
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 4
  - 5
  - 8
  - 9
  - 10
  - 13
  - 15
  - 18
  - 20
  - 21
  - 23
  - 28
  - 30
  - 32
  - 35
  - 37
  - 39
  - 42
  - 43
  - 45
  - 48
  - 51
  - 53
  - 56
  - 59
  - 62
  - 65
  - 66
  - 71
oset_for_t_onto_y_in_g_guess:
  - 0
  - 3
  - 4
  - 8
  - 9
  - 15
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 3
  - 4
  - 5
  - 8
  - 9
  - 10
  - 13
  - 14
  - 15
  - 18
  - 20
  - 21
  - 23
  - 28
  - 30
  - 32
  - 33
  - 35
  - 37
  - 39
  - 42
  - 43
  - 45
  - 48
  - 51
  - 53
  - 56
  - 59
  - 62
  - 65
  - 66
  - 70
  - 71
  - 73
  - 74
  - 75
  - 78
  - 79
  - 81
  - 82
  - 85
  - 86
  - 91
  - 92
  - 93
  - 94
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 3
  - 4
  - 5
  - 8
  - 9
  - 10
  - 13
  - 14
  - 15
  - 18
  - 20
  - 21
  - 23
  - 28
  - 30
  - 32
  - 33
  - 35
  - 37
  - 39
  - 42
  - 43
  - 45
  - 48
  - 51
  - 53
  - 56
  - 59
  - 62
  - 65
  - 66
  - 70
  - 71
  - 73
  - 74
  - 75
  - 78
  - 79
  - 81
  - 82
  - 85
  - 86
  - 91
  - 92
  - 93
  - 94
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 4
  - 5
  - 8
  - 9
  - 10
  - 13
  - 14
  - 15
  - 18
  - 20
  - 21
  - 23
  - 28
  - 30
  - 32
  - 33
  - 35
  - 37
  - 39
  - 42
  - 43
  - 45
  - 48
  - 51
  - 53
  - 56
  - 59
  - 62
  - 65
  - 66
  - 70
  - 71
  - 73
  - 74
  - 75
  - 78
  - 79
  - 81
  - 82
  - 85
  - 86
  - 91
  - 92
  - 93
  - 94
  - 97
  - 99
