gadjid/src/snapshots/gadjid__test__large-CPDAG21-vs-CPDAG22.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-21
g_guess: 100-node-CPDAG-22
ancestor_aid:
  - 0.016464646464646463
  - 163
oset_aid:
  - 0.03464646464646465
  - 343
parent_aid:
  - 0.07909090909090909
  - 783
shd:
  - 0.006262626262626263
  - 31
t:
  - 0
  - 3
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 17
  - 28
  - 30
  - 31
  - 32
  - 33
  - 34
  - 40
  - 41
  - 45
  - 46
  - 48
  - 51
  - 53
  - 54
  - 57
  - 59
  - 60
  - 61
  - 62
  - 65
  - 68
  - 72
  - 73
  - 74
  - 76
  - 77
  - 82
  - 84
  - 88
  - 89
  - 91
  - 92
  - 94
  - 96
  - 98
y: 69
z:
  - 1
  - 4
  - 15
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 29
  - 35
  - 36
  - 39
  - 49
  - 50
  - 56
  - 58
  - 79
  - 80
  - 81
  - 87
  - 90
  - 93
  - 95
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 1
  - 5
  - 6
  - 15
  - 16
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 29
  - 35
  - 36
  - 37
  - 38
  - 39
  - 42
  - 43
  - 44
  - 47
  - 49
  - 50
  - 52
  - 55
  - 56
  - 58
  - 63
  - 64
  - 66
  - 67
  - 69
  - 70
  - 71
  - 75
  - 78
  - 79
  - 80
  - 81
  - 83
  - 85
  - 86
  - 87
  - 90
  - 93
  - 95
  - 97
  - 99
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 2
  - 4
  - 5
  - 6
  - 15
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 29
  - 35
  - 36
  - 37
  - 38
  - 39
  - 43
  - 44
  - 49
  - 50
  - 55
  - 58
  - 63
  - 67
  - 69
oset_for_t_onto_y_in_g_guess:
  - 1
  - 2
  - 4
  - 15
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 86
  - 87
  - 88
  - 90
  - 92
  - 93
  - 95
  - 96
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 2
  - 4
  - 5
  - 6
  - 15
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 29
  - 35
  - 36
  - 37
  - 38
  - 39
  - 42
  - 43
  - 44
  - 47
  - 49
  - 50
  - 52
  - 55
  - 56
  - 58
  - 63
  - 64
  - 66
  - 67
  - 69
  - 70
  - 71
  - 75
  - 78
  - 79
  - 80
  - 81
  - 83
  - 85
  - 86
  - 87
  - 90
  - 93
  - 95
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 2
  - 4
  - 5
  - 6
  - 15
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 29
  - 35
  - 36
  - 37
  - 38
  - 39
  - 42
  - 43
  - 44
  - 47
  - 49
  - 50
  - 52
  - 55
  - 56
  - 58
  - 63
  - 64
  - 66
  - 67
  - 69
  - 70
  - 71
  - 75
  - 78
  - 79
  - 80
  - 81
  - 83
  - 85
  - 86
  - 87
  - 90
  - 93
  - 95
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 2
  - 4
  - 5
  - 6
  - 15
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 29
  - 35
  - 36
  - 37
  - 38
  - 39
  - 42
  - 43
  - 44
  - 47
  - 49
  - 50
  - 52
  - 55
  - 56
  - 58
  - 63
  - 64
  - 66
  - 67
  - 69
  - 70
  - 71
  - 75
  - 78
  - 79
  - 80
  - 81
  - 83
  - 85
  - 86
  - 87
  - 90
  - 93
  - 95
  - 97
  - 99
